# 0.13.02 (27107) 01-08-2009
deploying a dev version so people can see changes to PhetTabbedPane (#1058)
1-7-09: #1058, change default tab colors, change default canvas background
# 0.13.01 (27013) 01-05-2009
testing deploy process
# 0.13.00 (26984) 01-05-2009
Testing deploy-prod
# 0.12.01 (26983) 01-05-2009
Testing deploy-dev
# 0.12.00 (26978) 01-05-2009
verifying #1070, deploy failed because I forgot to start VPN
# 0.11.00 (26977) 01-05-2009
verifying #1070 by testing deploy to tiger
# 0.10.05 (26972) 01-04-2009
Testing deploy process
# 0.10.04 (26971) 01-04-2009
Testing deploy process, see #1070
# 0.10.03 (26967) 01-04-2009
added developer controls for setting tabbed pane properties
# 0.10.02 (26821) 12-22-2008
12/22/08: #1058, add developer control and an extra module for testing tab colors
12/22/08: move about.credits property to strings file
# 0.10.01 (26536) 12-03-2008
Testing build process
# 0.10.00 (26391) 11-20-2008
Testing that deploy to prod also deploys to dev.
# 0.09.00 (26381) 11-20-2008
Testing deployment to tigercat.
# 0.08.13 (26379) 11-20-2008
Testing again.
# 0.08.12 (26376) 11-20-2008
Test message.
# 0.08.10 (26373) 11-20-2008
Test of the new builder gui.
# 0.08.09 (26333) 11-19-2008
testing new build process again
# 0.08.08 (26332) 11-19-2008
Testing new build and deploy 3rd time.
# 0.08.07 (26331) 11-19-2008
testing new build process
# 0.08.06 (26330) 11-19-2008
testing new build process
# 0.08.04 (26308) 11-19-2008
Test revised header template.
# 0.08.03 (26306) 11-19-2008
Test header generation 2.
Test message for header.
# 0.08.02 (26303) 11-19-2008
test deploy process
10/8/08 - use PhetApplicationConfig.launchSim
10/8/08 - changes log file created