@@ -1,6 +1,7 @@
+1-8-09: #1058, add another module, so we can see what tab changes look like with multiple tabs
 # 0.13.02 (27107) 01-08-2009
 deploying a dev version so people can see changes to PhetTabbedPane (#1058)
-1-7-09: #1058, change default tab colors, change default canvas background
+1-8-09: #1058, change default tab colors, change default canvas background
 # 0.13.01 (27013) 01-05-2009
 testing deploy process
 # 0.13.00 (26984) 01-05-2009
